Ros2_workspace/log/build_2022-05-11_08-10-40/got_coffe/stdout_stderr.log
running egg_info
creating ../../build/got_coffe/got_coffe.egg-info
writing ../../build/got_coffe/got_coffe.egg-info/PKG-INFO
writing dependency_links to ../../build/got_coffe/got_coffe.egg-info/dependency_links.txt
writing entry points to ../../build/got_coffe/got_coffe.egg-info/entry_points.txt
writing requirements to ../../build/got_coffe/got_coffe.egg-info/requires.txt
writing top-level names to ../../build/got_coffe/got_coffe.egg-info/top_level.txt
writing manifest file '../../build/got_coffe/got_coffe.egg-info/SOURCES.txt'
reading manifest file '../../build/got_coffe/got_coffe.egg-info/SOURCES.txt'
writing manifest file '../../build/got_coffe/got_coffe.egg-info/SOURCES.txt'
running build
running build_py
creating /home/xilinx/wrkspace/build/got_coffe/build
creating /home/xilinx/wrkspace/build/got_coffe/build/lib
creating /home/xilinx/wrkspace/build/got_coffe/build/lib/got_coffe
copying got_coffe/nn_sub.py -> /home/xilinx/wrkspace/build/got_coffe/build/lib/got_coffe
copying got_coffe/__init__.py -> /home/xilinx/wrkspace/build/got_coffe/build/lib/got_coffe
copying got_coffe/nn_pub.py -> /home/xilinx/wrkspace/build/got_coffe/build/lib/got_coffe
running install
running install_lib
creating /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe
copying /home/xilinx/wrkspace/build/got_coffe/build/lib/got_coffe/nn_sub.py -> /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe
copying /home/xilinx/wrkspace/build/got_coffe/build/lib/got_coffe/__init__.py -> /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe
copying /home/xilinx/wrkspace/build/got_coffe/build/lib/got_coffe/nn_pub.py -> /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe
byte-compiling /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_sub.py to nn_sub.cpython-38.pyc
byte-compiling /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/__init__.py to __init__.cpython-38.pyc
byte-compiling /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py to nn_pub.cpython-38.pyc
  File "/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py", line 82
    !fswebcam  --no-banner --save {orig_img_path} -d /dev/video0 2> /dev/null
    ^
SyntaxError: invalid syntax

running install_data
creating /home/xilinx/wrkspace/install/got_coffe/share/ament_index
creating /home/xilinx/wrkspace/install/got_coffe/share/ament_index/resource_index
creating /home/xilinx/wrkspace/install/got_coffe/share/ament_index/resource_index/packages
copying resource/got_coffe -> /home/xilinx/wrkspace/install/got_coffe/share/ament_index/resource_index/packages
copying package.xml -> /home/xilinx/wrkspace/install/got_coffe/share/got_coffe
running install_egg_info
Copying ../../build/got_coffe/got_coffe.egg-info to /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe-0.0.0-py3.8.egg-info
running install_scripts
Installing listener script to /home/xilinx/wrkspace/install/got_coffe/lib/got_coffe
Installing talker script to /home/xilinx/wrkspace/install/got_coffe/lib/got_coffe
writing list of installed files to '/home/xilinx/wrkspace/build/got_coffe/install.log'
